# HomeManager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  cli.py  docker-compose.yml  nginx.conf  pyproject.toml  skills-lock.json
.claude/: settings.local.json
ansible/: deploy.sh  deploy.yml
ansible/group_vars/: all.yml
ansible/inventory/: hosts.yml
ansible/roles/homemanager/handlers/: main.yml
ansible/roles/homemanager/tasks/: main.yml
backend/: main.py
backend/agents/: orchestrator.py
backend/agents/crews/: home_crew.py
backend/agents/tools/: rag_tools.py  supabase_tools.py
backend/api/routes/: agent.py  appliances.py  homes.py  maintenance.py  manuals.py  prototype.py
backend/core/: auth.py  config.py  supabase_client.py
backend/models/: agent_models.py  appliance.py  home.py  maintenance.py  manual.py
backend/rag/: processor.py  retriever.py
backend/services/: appliance_service.py  claude_sdk_service.py  home_service.py  maintenance_service.py  manual_search_service.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AssistantPage.tsx  DashboardPage.tsx  HomesPage.tsx  LoginPage.tsx  SchedulePage.tsx  SettingsPage.tsx
frontend/src/providers/: AuthProvider.tsx  ThemeProvider.tsx
frontend/src/stores/: agentStore.ts  applianceStore.ts  homeStore.ts  maintenanceStore.ts
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql
tests/: test_models.py
(+16 files in other folders)
